@@ -36,7 +36,7 @@ open AArch64Base
 /* Instructions */
 %token B BEQ BNE CBZ CBNZ
 %token LDR LDP LDNP STP STNP LDRB LDRH STR STRB STRH LDAR LDXR LDAXR STLR STXR STLXR CMP
-%token MOV ADD EOR SUBS
+%token MOV ADD EOR SUBS AND
 %token DMB DSB ISB
 %token SY ST LD
 %token OSH OSHST OSHLD
@@ -182,6 +182,10 @@ instr:
   { I_OP3 (V64,EOR,$2,$4,$6) }
 | EOR wreg COMMA wreg COMMA kwr
   { I_OP3 (V32,EOR,$2,$4,$6) }
+| AND xreg COMMA xreg COMMA kr
+  { I_OP3 (V64,AND,$2,$4,$6) }
+| AND wreg COMMA wreg COMMA kwr
+  { I_OP3 (V32,AND,$2,$4,$6) }
 | SUBS xreg COMMA xreg COMMA kr
   { I_OP3 (V64,SUBS,$2,$4,$6) }
 | SUBS wreg COMMA wreg COMMA kwr
